src/css/custom.css
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
  font-family: hind siliguri, sans-serif ;
 }
 
.text--truncate {
  font-family: Hind Siliguri,sans-serif;
  font-size: 24px;
  font-weight: 500;
}

 /* hero settings */
.hero__title {
  font-size: 50px;
  font-weight: 700;
  font-family: Inter, -apple-system, "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}
.hero__subtitle {
  font-size: 1rem;
}
.hero--primary {
  background-image: url('../../static/img/image_mountain.png');
  background-color: white;
  background-position: center center;
  background-size: cover;
  opacity: 1;
  transition: opacity 1.2s,transform 1.6s;
  transition-timing-function: cubic-bezier(0.215,0.61,0.355,1);
}
.hero {
  --ifm-button-font-weight: 700;
}

.adopters-table {
  width: 1150px;
}

/* the buttons on the hompage stack on cell phones - this seems to fix it */
.buttons_src-pages-docs-index-module {
  display: flow-root !important;
}
.buttons_src-pages-index-module {
  display: block !important;
}
.buttons_s0t3 {
  display: flow-root !important;
}

body {
  font-family: hind siliguri, sans-serif ;
}

html {
  font-size: 18px;
}

code {
  font-weight: bold;
}

.markdown h1:first-child {
  font-size: 2.5rem !important;
}

/* this is for breadcrumbs, except the current page (far right) */
/* the current page is the `--active` one next */
.breadcrumbs__link  {
  color: #FFB200;
  /*background-color: #2F2C3A;*/
  font-size: 1rem;
}

.breadcrumbs__text--active  {
  color: #FF0000;
  background-color: #FF0000;
  font-size: 1rem;
}

/* this is the far right crumb */
.breadcrumbs__item--active {
  color: #FFFFFF;
  background-color: #FFEFCA;
  font-size: 1rem;
}

/* this is the background rectangle behind the crumb */
/* not used at the moment
.breadcrumbs__item  {
  color: #FF0000;
  background-color: #FF0000;
  font-size: 1rem;
}
*/


/* You can override the default Infima variables here. */
:root {
  --clickhouse-yellow-old: #ffcc00;
  --clickhouse-yellow: #ffb200;
  --clickhouse-gray: #4C596E;
  --clickhouse-blue-old: #10223e;
  --clickhouse-blue: #2F2C3A;
  --clickhouse-orange: #ffb200;
  --clickhouse-red: #FF3939;
  --clickhouse-medium-blue: #257AF4;
  --clickhouse-tile-border: #D6DBDF;
  --clickhouse-pink: #FFE4E1;
  --clickhouse-beige: #FFE4B5;
  --clickhouse-light-blue: #E3F1FE;

  --ifm-font-color-base: #2F2C3A;

  --ifm-font-family-base: Roboto, "Helvetica Neue", sans-serif;
  --ifm-h3-font-size: 1.75rem !important;
  --ifm-h2-font-size: 2rem !important;
  --ifm-h1-font-size: 2.5rem !important;
  --ifm-color-primary: var(--clickhouse-blue);
  --ifm-color-primary-dark: #2e4d7a;
  --ifm-color-primary-darker: #2b4874;
  --ifm-color-primary-darkest: #243c5f;
  --ifm-color-primary-light: #385e96;
  --ifm-color-primary-lighter: #3b629c;
  --ifm-color-primary-lightest: #f1f6f9;;
  --ifm-code-font-size: 15px;
  --ifm-link-color: #b82c39;
  --ifm-color-secondary: var(--clickhouse-yellow);
  --ifm-footer-link-color: var(--clickhouse-gray);
  --ifm-footer-link-hover-color: #212529;
  --ifm-footer-background-color: var(--ifm-color-primary-lightest);


  --ifm-heading-color: var(--ifm-color-primary);
  --ifm-hero-text-color: var(--ifm-color-primary);

  --ifm-font-color-base-inverse: #6c757d;
  --ifm-hero-background-color: white;

  --ifm-color-info-contrast-foreground: white;
  --ifm-color-info-contrast-background: var(--ifm-color-primary);

  /* Sidebar nav variables */
  --ifm-menu-color: #ffffff;
  --ifm-menu-link-padding-vertical: 0.375rem;
  --ifm-menu-link-padding-horizontal: 1rem;
  --ifm-font-weight-semibold: 500;
  --ifm-color-emphasis-300: #dadde1;
  --ifm-menu-color-active: #ffffff;
  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(255,255,255" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
  --ifm-menu-color-background-active: var(--ifm-hover-overlay);
  --ifm-menu-color-background-hover: var(--ifm-hover-overlay);
  --ifm-menu-link-padding-horizontal: 1rem;
  --ifm-menu-link-padding-vertical: 0.375rem;
  --ifm-menu-link-sublist-icon-filter: none;
  --ifm-navbar-background-color: var(--ifm-background-surface-color);
  --ifm-navbar-height: 3.75rem;
  --ifm-navbar-item-padding-horizontal: 0.75rem;
  --ifm-navbar-item-padding-vertical: 0.25rem;
  --ifm-navbar-link-color: var(--ifm-font-color-base);
  --ifm-navbar-link-hover-color: var(--ifm-color-primary);
  --ifm-navbar-link-active-color: var(--ifm-link-color);
  --ifm-navbar-padding-horizontal: var(--ifm-spacing-horizontal);
  --ifm-navbar-padding-vertical: calc(var(--ifm-spacing-vertical) * 0.5);
  --ifm-navbar-shadow: var(--ifm-global-shadow-lw);
  --ifm-navbar-search-input-background-color: var(--ifm-color-emphasis-200);
  --ifm-navbar-search-input-color: var(--ifm-color-emphasis-800);
  --ifm-navbar-search-input-placeholder-color: var(--ifm-color-emphasis-500);
  --ifm-navbar-search-input-icon: url(data:image/svg+xml;utf8,<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>);
  --ifm-navbar-sidebar-width: 83vw;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}
.table-of-contents__link:hover, .table-of-contents__link:hover code, .table-of-contents__link--active, .table-of-contents__link--active code {
  font-weight: 500;
}
.menu {
  background-color: var(--ifm-color-primary);
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.alert {
  border-color: var(--clickhouse-blue);
  --ifm-alert-background-color: #ffffff;
  --ifm-alert-foreground-color: black;


}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}


.tabs__item--active {
  --ifm-tabs-color-active-border:var(--ifm-color-primary-dark);
  --ifm-tabs-color-active: var(--ifm-link-color);
}

/* Padding for the buttons on the home page */
.button--lg {
  margin: 10px 8px;
  --tw-bg-opacity: 1;
  background-color: rgb(255 178 0/var(--tw-bg-opacity));
  color: white;
  font-size: 14px;
  font-weight: 700;
  font-stretch: 100%;
  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
}
.button.button--secondary {
  color: white;
}
.menu__link--active:not(.menu__link--sublist) {
  font-weight: 700;
  color: var(--clickhouse-yellow);
}

/* background color of the main container on the docs pages */
.docMainContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage-styles-module {
  background: #f8f8f8;
}
.docMainContainer_TCnq {
  background: #f8f8f8;
}

/* the h1 style on the category pages overrides the font-size */
.title_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocCategoryGeneratedIndexPage-styles-module {
  --ifm-h1-font-size: 2.5rem !important;
}
.title_kItE {
  --ifm-h1-font-size: 2.5rem !important;
}

.prism-code {
  border: 2px solid var(--clickhouse-yellow);
}

/* Add a drop shadow to images in the user guides and docs */
[class^="img_node_modules"] {
  width: 100%;
  filter: drop-shadow(2px 4px 6px gray);
  /*padding-bottom: 2rem;
  padding-top: 0.5rem;*/
  display: block;
  margin-left: auto;
  margin-right: auto;
  background: white;
}

.col--4 h3 {
  font-size: 20px;
  font-weight: 700;
}
.col--4 p {
  font-size: 14px;
  font-weight: 400;
}
/* The auto-generated folder pages */
.row .col.col--6 {
  --ifm-col-width: 100%;
}
.padding--lg {
  padding: 0.6rem !important;
}

.footer__logo {
  max-height: 5rem;
}
.footer__copyright {
  font-size: 0.7em;
  padding-top: 0.5rem;
}

.language-response button {
    display: none;
}

.language-response pre {
    border-style: none;
    color: crimson;
}


/* Font colors on the ANSI compatibilty page */
.text-warning {
  color: var(--clickhouse-yellow) !important;
  font-weight: bold;
}
.text-success {
  color: darkgreen!important;
  font-weight: bold;
}
.text-danger {
  color: var(--clickhouse-red) !important;
  font-weight: bold;
}

.notfound {
  margin-left: unset!important;
  margin-right: 6rem;
}

.sidebarWithHideableNavbar_d0QC {
  background-color: rgb(248, 248, 248);
}

.card {
  border-radius: unset;
  box-shadow: unset;
  flex-direction: unset;
  overflow: unset;
}

.margin-bottom--lg {
  margin-bottom: 0rem !important;
  padding: 0.1rem !important;
}
.margin-top--lg li {
  margin-left: 3rem;
}

/* Fixes spacing on large displays, but doesn't work well on the home page */
.main-wrapper {
  flex: 1;
  display: flex;
  min-height:100%;
}

/* This fixes the homepage */
.homepage-wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.homepage-wrapper .main-wrapper {
  display: block !important;
  flex: 1 1 auto;
  min-height: auto;
}

@media (min-width: 1440px) {
  .container {
    max-width: 95%;
  }
}

#__docusaurus {
    height: 100%;
}

.navbar {
    flex: 0 0 var(--ifm-navbar-height);
}
.navbar__link {
  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
  font-size: 14px;
  font-weight: 600;
}
.search-result-match {
  font-size: 1.3rem;
}
.searchResultItemHeading_KbCB {
  font-size: 1.3rem;
}

.navbar__brand {
  margin-right: 5rem;
}

/* Add dark theme */
[data-theme='dark'] {
  /* text headings */
  --ifm-heading-color: #FFFFFF;

  /* text color */
  --ifm-font-color-base: #FFFFFF;

  /* link colors */
  --ifm-link-color: #FFB200;

  /* links in navbar */

  /* everything other than the `Docs` link */
  --ifm-navbar-link-color: #FFFFFF;
  /* surprisingly, the hover color is used for the active page when on `Docs`, set to same as previous */
  --ifm-navbar-link-hover-color: #FFFFFF;

  /* footer */
  --ifm-footer-link-color: #FFFFFF;
  --ifm-footer-link-hover-color: #FFFFFF;
  --ifm-footer-background-color: #373343;

  /* the left nav uses this */
  --ifm-color-primary: #2F2C3A;

  /* color of the button around the link for the active page */
  /* it is set to the color of the left nav as the link is yellow */
  /* and that stands out nicely as is. */
  --ifm-menu-color-background-active: #2F2C3A;

  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

